# banana-clicker

./: CMakeLists.txt
src/: banana.c  banana.h  game.c  game.h  main.c  rect.h  renderer.c  renderer.h  types.h  window.c  window.h
